2005-01-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_leave_notify): Avoid spurious
	drags.  (#164884)

2005-01-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (update_keymap): Handle Greek tonos
	dead accent key. (#164859, reported and fix verified by Daniel
	Atallah.)

	* gtk/gtkimcontextsimple.c (gtk_compose_seqs): Handle
	GDK_Greek_accentdieresis (tonos and dialytika) combining with iota
	and upsilon.

	* gtk/gtkfilesystemwin32.c (gtk_file_system_win32_volume_get_display_name): 
	Don't call GetVolumeInformation() for network drives. They might
	be disconnected, and calling GetVolumeInformation() will then
	cause long delays. (#164448, reported by Dave Neary.) It seems to
	be very hard to reliably find out whether a network drive is
	connected or not, so it's easier to just not try getting the
	volume name for them. See the bug report for discussion.

	Make volume name display formats translatable.

	Fix for #163702, from Ivan Wong: 
	
	* gdk/win32/gdkprivate-win32.h 
	* gdk/win32/gdkglobals-win32.c: New flag _ignore_destroy_clipboard.
	
	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Handle
	WM_DESTROYCLIPBOARD. Unless _ignore_destroy_clipboard, generate a
	GDK_SELECTION_CLEAR event.

	* gdk/win32/gdkselection-win32.c
	(gdk_selection_owner_set_for_display): Set _ignore_destroy_clipboard
	when emptying the clipboard ourselves.

	(gdk_selection_send_notify_for_display): Remove the artifical
	GDK_SELECTION_CLEAR event generation.

2005-01-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_get_accessible): More details
	provided by Bill Haneman.

2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_get_accessible): Add docs.  (#164725,
	George Kraft IV)

	* gtk/gtkdialog.c (gtk_dialog_map): Don't loop forever
	here, even if the only focusable widgets are labels.

2005-01-20  Matthias Clasen  <mclasen@redhat.com>
